# video_namer

./: Cargo.toml  bluey.csv  download-models.sh
src/: main.rs
