[package]
name = "bluey"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"]}
ffmpeg-next = "7.1.0"
anyhow = "1.0.97"
image = "0.25.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indicatif = "0.17.11"
ocrs = "0.10.0"
rten = "0.16.0"
clap-verbosity-flag = {  version = "3.0.2", features = ["tracing"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
strsim = "0.11.1"